--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -2088,7 +2088,8 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    padding-top: 0.1px;
+    padding-top: 50px;
+    padding-right: 150px;;
 }
 
 [class*="sc_content_width_"] {
