--- a/css/style.css
+++ b/css/style.css
@@ -15563,7 +15563,7 @@ label.required .sc_form_field_title:after {
 }
 
 .bg_image_2 {
-    background-image: url(../images/bg_contacts.jpg);
+    background-image: url(../images/houses/08.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
