--- a/css/template-color.css
+++ b/css/template-color.css
@@ -10557,7 +10557,7 @@ section.scheme_side,
 .scheme_side.wpb_column>.vc_column-inner>.wpb_wrapper,
 .scheme_side.wpb_text_column {
     color: #969fa6;
-    background-color: #495e35;
+    background-color: #7c4836;
 }
 
 .scheme_side.sc_parallax .sc_parallax_overlay {
@@ -12563,7 +12563,7 @@ section.scheme_side,
 }
 
 .scheme_dark .copyright_wrap_inner {
-    background-color:  #495e35;
+    background-color:  #7c4836;
     border-color: #0c1200;
     color: #ffffff;
 }
