--- a/css/template-color.css
+++ b/css/template-color.css
@@ -2755,7 +2755,7 @@ li.bbp-topic-title .bbp-topic-permalink,
 
 .scheme_default .sc_services_iconed .sc_services_item_title a:hover,
 .scheme_default .sc_services_iconed .sc_services_item:hover .sc_services_item_title a {
-    color: #ffffff;
+    color: #88b04b;
 }
 
 .scheme_default .sc_services.slider_swiper .swiper-pagination-bullet {
