--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,3 +1,8 @@
 input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     top: 20% !important;
 }
+
+.privacy-check-container {
+    line-height : 1;
+    text-align: justify;   
+}
