--- a/css/style.css
+++ b/css/style.css
@@ -827,7 +827,10 @@ label.required:after {
 
 input[type="radio"],
 input[type="checkbox"] {
-    display: none;
+    opacity: 0;
+    width: 0;
+    z-index: -1;
+    position: absolute;
 }
 
 input[type="radio"]+label,
