--- a/css/template-color.css
+++ b/css/template-color.css
@@ -7806,7 +7806,7 @@ li.bbp-topic-title .bbp-topic-permalink,
 }
 
 .scheme_side a {
-    color: #ffffff;
+    color: #88b04b;
 }
 
 .scheme_side a:hover {
