--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -6,3 +6,12 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     line-height : 1;
     text-align: justify;   
 }
+
+.my-layer {
+    background-color: rgba(248, 247, 216, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
