--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -15,3 +15,11 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     width: 100%;
     height: 100%;
 }
+
+@media screen and (min-width: 600px) {
+    .my_promo_cst {
+        top: 50%;
+        transform: translateY(-50%);
+        width: 45%;
+    }
+}
