--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -22,4 +22,8 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
         transform: translateY(-50%);
         width: 45%;
     }
+    
+    .promo_text_right {
+        margin-left:50%;
+    }
 }
