--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -2088,7 +2088,7 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    padding-top: 50px;
+    /*padding-top: 50px;*/
 }
 
 [class*="sc_content_width_"] {
