--- a/css/style.css
+++ b/css/style.css
@@ -15575,7 +15575,7 @@ label.required .sc_form_field_title:after {
 }
 
 .bg_image_3 {
-    background-image: url(../images/houses/07.jpeg);
+    background-image: url(../images/Render/Esterne/FRONT-P.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15583,7 +15583,7 @@ label.required .sc_form_field_title:after {
 
 .bg_image_4 {
     /*background-image: url(../images/bg_hotspots.jpg);*/
-    background-image: url(../images/houses/08.jpeg);
+    background-image: url(../images/Render/Esterne/POST-1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
