--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ audio {
     font-size: 100%;
     font-style: inherit;
     font-weight: inherit;
-    line-height: inherit;
+    line-height: 1.5em;
     border: 0;
     outline: 0;
     -webkit-font-smoothing: antialiased;
