--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -24,13 +24,68 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 #services-section {
     position: relative;
 }
+
 #services-section .dark-box {
     width: 100%;
     height: 100%;
     position: absolute;
-    /*background-color: #0008;*/
+    background-color: #0008;
     top: 0;
     display: none;
+}
+
+#services-section .my_container {
+    width: 45%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    display: none;
+    overflow: hidden;
+    position: absolute;
+    transition: 1s;
+    transition-timing-function: ease;
+    /*height: 60%;*/
+    /*background-color: rgba(255, 0, 0, 0.533);*/
+}
+
+#services-section .grower-box {
+    position: relative;
+    /*width: 140px;*/
+    width: 50% !important;
+    /*height: 140px;*/
+    background-color: #495E35;
+    top: 20%;
+    /*top: 0;*/
+    left: -100%;
+    z-index: 15;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*height: auto !important;*/
+    height: 60%;
+    transition: 1s;
+    transition-timing-function: ease;
+}
+
+@media screen and (max-width: 600px) {
+
+    #services-section .my_container {
+        top: 20%;
+        width: 80%;
+        right: 10%;
+        height: 60% !important;
+        transition: 1s;
+        transition-timing-function: ease;
+    }
+
+    #services-section .grower-box {
+        position: relative;
+        width: 80% !important;
+        left: -100%;
+        height: 85%;
+        top: 0;
+    }
 }
 
 #services-section .sc_services_item_featured_top {
@@ -41,33 +96,6 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 }
 #services-section .sc_services_item.active .sc_services_item_header {
     opacity: 0;
-}
-
-#services-section .grower-box {
-    position: absolute;
-    width: 140px;
-    height: 140px;
-    background-color: #495E35;
-    top: 0;
-    opacity: 0;
-    transition-property: top left transform width height;
-    transition-duration: .5s;
-    /* transition-delay: .5s; */
-    z-index: 15;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: auto !important;
-}
-
-#services-section .grower-box.grown {
-    opacity: 1 !important;
-    top: 50% !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%) !important;
-    width: 80% !important;
-    /*height: 50% !important;*/
 }
 
 
@@ -95,15 +123,6 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 
     .my_figure {
         padding-left: 30%;
-    }
-
-    #services-section .grower-box.grown {
-        opacity: 1 !important;
-        top: 60% !important;
-        left: 77% !important;
-        transform: translate(-50%, -50%) !important;
-        width: 40% !important;
-        /*height: 60% !important;*/
     }
 
     .little_maps {
