--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -35,6 +35,7 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 }
 
 #services-section .my_container {
+    /*position: absolute !important;*/
     width: 45%;
     height: 100%;
     top: 0;
@@ -44,29 +45,26 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     position: absolute;
     transition: 1s;
     transition-timing-function: ease;
-    /*height: 60%;*/
     /*background-color: rgba(255, 0, 0, 0.533);*/
+    /*height: 10% !important;*/
 }
 
-#services-section .grower-box {
+#services-section .sliding-box {
     position: relative;
-    /*width: 140px;*/
     width: 50% !important;
-    /*height: 140px;*/
     background-color: #495E35;
     top: 20%;
-    /*top: 0;*/
     left: -100%;
     z-index: 15;
     padding: 20px;
-    display: flex;
+    /*display: flex;
     flex-direction: column;
-    justify-content: center;
-    /*height: auto !important;*/
-    height: 60%;
+    justify-content: center;*/
+    height: 55%;
     transition: 1s;
     transition-timing-function: ease;
     margin: 0 auto;
+    overflow:overlay
 }
 
 @media screen and (max-width: 600px) {
@@ -75,12 +73,12 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
         top: 20%;
         width: 80%;
         right: 10%;
-        height: 60% !important;
+        height: 65% !important;
         transition: 1s;
         transition-timing-function: ease;
     }
 
-    #services-section .grower-box {
+    #services-section .sliding-box {
         position: relative;
         width: 80% !important;
         left: -100%;
@@ -102,15 +100,15 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 
 .sc_services_item {
     transition: all .5s;
+    z-index: 1;
 }
-.sc_services_item.active {
-    z-index: 10;
+
+.sc_services_item.unactive {
+    z-index: 0 !important;
 }
 
 @media screen and (min-width: 600px) {
     .my_promo_cst {
-        /* top: 50%; */
-        /* transform: translateY(-50%); */
         width: 45%;
     }
 
@@ -131,24 +129,13 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     }
 }
 
-/*
-.sc_services_item_header {
-    transition-duration: 1s;
-}
-
-.sc_services_item_header:hover {
-    width: 800px;
-    height: 800px;
-}
-*/
-
 .sc_services_item_title {
     transition: .5s;
 }
 
 .intern-box-title {
     text-align:center;
-    margin-top: 0%;
+    margin-top: 10%;
     margin-bottom: 0%;;
 }
 
@@ -187,10 +174,6 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     line-height: 1.6;
 }
 
-.intern-box-text {
-    /*margin-bottom:3px;*/
-}
-
 .boxImage {
     display: block;
     margin-left: auto;
@@ -217,4 +200,16 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+.close-button {
+    position: absolute !important;
+    top: 0 !important;
+    right: 0 !important;
+    background-color: #495E35 !important;
+    color: white !important;
+    font-size: large !important;
+    width: 40px !important;
+    height: 40px !important;
+    padding: 0 !important;
 }
