--- a/css/template-color.css
+++ b/css/template-color.css
@@ -15192,7 +15192,7 @@ section.scheme_dark,
 }
 
 .hotspots-style-1 .cq-hotspots .hotspot-item a span {
-    background: #7c4836;
+    background: #88b04b;
 }
 
 .custom_mail,
