Sistema alcune cose
Tolti un po' di div a caso, rimpiazzati con padding.
Sistemate le piantine che non venivano visualizzate interamente.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -219,7 +219,7 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     
 }
 
-#capitolato:hover{
+#capitolato:hover {
     color: #495e35;
 }
 
@@ -228,3 +228,7 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     width:100% ;
 }
 */
+
+.main-title {
+    padding-top: 3rem !important;
+}
