--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -109,6 +109,10 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 }
 
 @media screen and (min-width: 600px) {
+    .main-img {
+        margin: 100px 0px 0px !important;
+    }
+    
     .my_promo_cst {
         width: 45%;
     }
@@ -247,4 +251,8 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 
 .titolo_colorato {
     color: #026232 !important;
+}
+
+.first-main-title {
+    margin: 30px 0px 0px;
 }
