--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -137,6 +137,14 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
         height: 100vh;
         object-fit: cover;
     }
+
+    #map_1 {
+        padding-top: 100px;
+        padding-left: 0;
+        width: 80%;
+        position: relative;
+        left:150px;
+    }
 }
 
 .sc_services_item_title {
@@ -256,3 +264,29 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 .first-main-title {
     margin: 30px 0px 0px;
 }
+
+* {box-sizing: border-box;}
+        
+.img-zoom-container {
+    position: relative;
+}
+
+.img-zoom-lens {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    /*set the size of the lens:*/
+    width: 300px;
+    height: 300px;
+}
+
+.img-zoom-result {
+    border: 1px solid #d4d4d4;
+    width: 500px;
+    height: 500px;
+    position: relative;
+    bottom: 200px;
+}
+
+/*#custom_container_1 {
+    width: 1200px !important;
+}*/
