Cambia un po' di cose
- Compresso svariate immagini
- Cambiato colore sfondo ultima pagina
- Risolto bug effetto opaco non abbastanza largo della prima pagina

--- a/css/template-color.css
+++ b/css/template-color.css
@@ -10557,7 +10557,7 @@ section.scheme_side,
 .scheme_side.wpb_column>.vc_column-inner>.wpb_wrapper,
 .scheme_side.wpb_text_column {
     color: #ffffff;
-    background-color: #8a6b56;
+    background-color: #9c7f6b;
 }
 
 .scheme_side.sc_parallax .sc_parallax_overlay {
@@ -12563,7 +12563,7 @@ section.scheme_side,
 }
 
 .scheme_dark .copyright_wrap_inner {
-    background-color:  #8a6b56;
+    background-color:  #9c7f6b;
     border-color: #0c1200;
     color: #ffffff;
 }
