--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -109,6 +109,10 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 }
 
 @media screen and (min-width: 600px) {
+    .column-inner-custom {
+        padding-left: 30px !important;
+        padding-right: 0px !important;
+    }
     #container_1 {
         bottom: 100px !important;
     }
