Implementato zoom e migliorato sliding box

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -67,25 +67,6 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     overflow:overlay
 }
 
-@media screen and (max-width: 600px) {
-
-    #services-section .my_container {
-        top: 20%;
-        width: 80%;
-        right: 10%;
-        height: 65% !important;
-        transition: 1s;
-        transition-timing-function: ease;
-    }
-
-    #services-section .sliding-box {
-        position: relative;
-        width: 80% !important;
-        left: -100%;
-        height: 85%;
-        top: 0;
-    }
-}
 
 #services-section .sc_services_item_featured_top {
     background-color: #026232;
@@ -107,6 +88,7 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
 .sc_services_item.unactive {
     z-index: 0 !important;
 }
+
 
 @media screen and (min-width: 600px) {
     .column-inner-custom {
@@ -294,6 +276,34 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     width: 1200px !important;
 }*/
 
+.images-modal-container {
+    position: fixed;
+    z-index: 99999;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    display: none;
+}
+.images-modal {
+    position: relative;
+    padding: 10px;
+    margin: 2vw;
+    background-color: white;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.images-modal img {
+    position: relative;
+    width: auto;
+    height: auto;
+}
+
+
 @media screen and (max-width: 600px) {
     #img_cartina_greenway {
         display: block;
@@ -315,6 +325,28 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     }
     .trx_addons_list_parameters {
         padding-bottom: 25px;
+    }
+    
+    #services-section #services-section .my_container {
+        top: 20%;
+        width: 80%;
+        right: 10%;
+        height: 65% !important;
+        transition: 1s;
+        transition-timing-function: ease;
+    }
+
+    #services-section .sliding-box {
+        position: relative;
+        width: 80% !important;
+        left: -100%;
+        height: 85%;
+        top: 0;
+    }
+    #services-section .sliding-box {
+        position: fixed;
+        width: 100% !important;
+        height: 100%;
     }
     /* .img-zoom-lens {
         width: 50px;
