--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -89,56 +89,6 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     z-index: 0 !important;
 }
 
-
-@media screen and (min-width: 600px) {
-    .column-inner-custom {
-        padding-left: 30px !important;
-        padding-right: 0px !important;
-    }
-    #container_1 {
-        bottom: 100px !important;
-    }
-    #custom_container_1{
-        width: calc(100vw - 90px) !important;
-    }
-    .main-img {
-        margin: 100px 0px 0px !important;
-    }
-    
-    .my_promo_cst {
-        width: 45%;
-    }
-
-    .promo_text_right {
-        margin-left:50%;
-    }
-
-    #sc_googlemap_1 {
-        padding-top: 75px;;
-    }
-
-    .my_figure {
-        padding-left: 30%;
-    }
-
-    .little_maps {
-        transform: rotate(90deg);
-    }
-
-    #img-punti {
-        height: 100vh;
-        object-fit: cover;
-    }
-
-    #map_1 {
-        padding-top: 100px;
-        padding-left: 0;
-        width: 80%;
-        position: relative;
-        left:150px;
-    }
-}
-
 .sc_services_item_title {
     transition: .5s;
 }
@@ -204,9 +154,11 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     height: auto !important;
 }
 
+
 .cqtooltip-wrapper img {
-    width: calc(100vw - 90px);
+    width: calc(100vw - 90px)
 }
+
 
 .close-button {
     position: absolute !important;
@@ -297,18 +249,32 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     top: 50%;
     transform: translateY(-50%);
 }
-.images-modal img {
-    position: relative;
-    width: auto;
-    height: auto;
+
+.custom_wrap {
+    margin-right: 0 !important;
+}
+
+.button_custom{
+    width: 100% !important;
 }
 
 
 @media screen and (max-width: 600px) {
+
+    .images-modal img {
+        position: relative;
+        width: auto;
+        height: auto;
+    }
+
     #img_cartina_greenway {
         display: block;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .main-img {
+        margin: 30px 0px 0px !important;
     }
 
     #img-punti {
@@ -327,7 +293,7 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
         padding-bottom: 25px;
     }
     
-    #services-section #services-section .my_container {
+    #services-section .my_container {
         top: 20%;
         width: 80%;
         right: 10%;
@@ -343,13 +309,95 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
         height: 85%;
         top: 0;
     }
+    /*
     #services-section .sliding-box {
         position: fixed;
         width: 100% !important;
         height: 100%;
     }
+    */
+    
     /* .img-zoom-lens {
         width: 50px;
         height: 50px;
     } */
+}
+
+@media screen and (min-width: 600px) {
+
+    .images-modal img {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+    }
+    
+    .column-inner-custom {
+        padding-left: 50px !important;
+        padding-right: 0px !important;
+    }
+    #container_1 {
+        bottom: 100px !important;
+    }
+    #custom_container_1{
+        width: calc(100vw - 90px) !important;
+    }
+    .main-img {
+        margin: 100px 0px 0px !important;
+    }
+    
+    .my_promo_cst {
+        width: 45%;
+    }
+
+    .promo_text_right {
+        margin-left:50%;
+    }
+
+    #sc_googlemap_1 {
+        padding-top: 75px;;
+    }
+
+    .my_figure {
+        padding-left: 30%;
+    }
+
+    .little_maps {
+        transform: rotate(90deg);
+    }
+
+    #img-punti {
+        height: 100vh;
+        object-fit: cover;
+    }
+
+    #map_1 {
+        padding-top: 100px;
+        padding-left: 0;
+        width: 80%;
+        position: relative;
+        left:150px;
+    }
+}
+
+@media screen and (max-width: 1279px) {
+    .custom_form_left {
+        padding-right: 0 !important;
+        padding-left: 0!important;
+    }
+    .custom_form_right {
+        padding-right: 0 !important;
+        padding-left: 0 !important;
+        padding-top: 0 !important;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .custom_form_left {
+        padding-right: 7px !important;
+        padding-left: 0!important;
+    }
+    .custom_form_right {
+        padding-left: 7px !important;
+        padding-right: 0 !important;
+    }   
 }
